--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,28 @@ spring:
   application:
     name: ocean-backend
 
+  # 1. 데이터베이스 설정 (기존 내용 유지)
   datasource:
-    # 아직 RDS 엔드포인트(주소)가 안 나왔으니 일단 비워둡니다. 나중에 채울 겁니다.
     url: jdbc:mysql://database-1.cnwayga6k6j6.us-east-1.rds.amazonaws.com:3306/smart_sourcing_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: admin
-    password: wjddnjswns  # 아까 설정한 비번
+    password: wjddnjswns
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update # 서버 켜질 때 DB 테이블 자동 생성
+      ddl-auto: update
     properties:
       hibernate:
-        format_sql: true # 로그 예쁘게 보기
+        format_sql: true
+
+  # 2. AWS SQS 설정 (새로 추가된 부분)
+  cloud:
+    aws:
+      region:
+        static: us-east-1
+      sqs:
+        # SQS 대기열 주소
+        endpoint: https://sqs.us-east-1.amazonaws.com/730335221432/smart-sourcing-queue
 
 server:
   port: 8080
