--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,6 @@ env:
   ECS_SERVICE: SourcingAPITask-service-v1zou2fu  # ⭐주신 정보: 서비스 이름
   ECS_CLUSTER: SmartSourcing-Cluster         # ⭐주신 정보: 클러스터 이름
   # ⚠️ 주의: 아래 이름은 AWS ECS '태스크 정의'에 설정된 '컨테이너 이름'과 똑같아야 합니다.
-  # 보통 리포지토리 이름과 같게 설정하지만, 다를 경우 수정해주세요.
   CONTAINER_NAME: sourcing-api
 
 jobs:
@@ -54,14 +53,16 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       # 6. Docker 이미지 빌드 및 푸시 (ApiDockerfile 사용)
+      # ⭐ 수정된 부분: Dockerfile 경로와 컨텍스트를 명시적으로 지정
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # ApiDockerfile을 사용하여 빌드
-          docker build -f ApiDockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          # 파일 경로: -f ./ApiDockerfile (현재 디렉토리의 ApiDockerfile)
+          # 빌드 컨텍스트: ./ (현재 디렉토리)
+          docker build -f ./ApiDockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:latest ./
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:latest" >> $GITHUB_OUTPUT
 
