--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Backend Deploy to ECS (Lab Ver.)
+name: Backend Deploy to ECS (Production)
 
 on:
   push:
@@ -6,12 +6,14 @@ on:
       - main
 
 env:
-  AWS_REGION: us-east-1                      # ⭐주신 정보: 리전
-  ECR_REPOSITORY: sourcing-api               # ⭐주신 정보: ECR 리포지토리 이름
-  ECS_SERVICE: SourcingAPITask-service-v1zou2fu  # ⭐주신 정보: 서비스 이름
-  ECS_CLUSTER: SmartSourcing-Cluster         # ⭐주신 정보: 클러스터 이름
-  # ⚠️ 주의: 아래 이름은 AWS ECS '태스크 정의'에 설정된 '컨테이너 이름'과 똑같아야 합니다.
-  CONTAINER_NAME: sourcing-api
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: sourcing-api               # ECR 리포지토리 이름 (사용자 지정)
+  ECS_SERVICE: SourcingAPITask-service-v1zou2fu  # ECS 서비스 이름 (사용자 지정)
+  ECS_CLUSTER: SmartSourcing-Cluster
+  CONTAINER_NAME: sourcing-api               # Task Definition 내부의 컨테이너 이름 (사용자 지정)
+
+  # ⭐ 중요: Task Definition의 순수한 이름 (리비전 번호 제거)을 입력해야 합니다.
+  ECS_TASK_DEFINITION_NAME: SourcingAPITask-service # Task Def의 이름 부분만 입력 (사용자 지정)
 
 jobs:
   deploy:
@@ -21,52 +23,106 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 1. Java JDK 17 세팅 (Spring Boot 버전에 맞춰 17 또는 21 등 사용)
+      # ⚠️ 새로운 배포 로직을 위해 'jq' 설치는 필수입니다.
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      # 1. Java JDK 17 세팅 (Spring Boot 버전에 맞춰 JDK 설정)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 2. gradlew 실행 권한 부여
+      # 2. gradlew 실행 권한 부여 및 빌드
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 3. Spring Boot 빌드 (테스트 제외 - 속도 최적화)
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
-      # 4. AWS 자격 증명 설정 (Github Secrets에 등록된 값 사용)
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 5. ECR 로그인
+      # ⭐ 디버깅을 위해 현재 인증 상태를 확인합니다. (권한 문제 확인용)
+      - name: Check AWS Caller Identity
+        run: aws sts get-caller-identity
+
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
 
       # 6. Docker 이미지 빌드 및 푸시 (ApiDockerfile 사용)
-      # ⭐ 수정된 부분: Dockerfile 경로와 컨텍스트를 명시적으로 지정
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${{ github.sha }} # 커밋 SHA를 태그로 사용 (버전 관리 용이)
         run: |
-          # 파일 경로: -f ./ApiDockerfile (현재 디렉토리의 ApiDockerfile)
-          # 빌드 컨텍스트: ./ (현재 디렉토리)
-          docker build -f ./ApiDockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:latest ./
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:latest" >> $GITHUB_OUTPUT
+          # ⭐ 수정 완료: -f ./ApiDockerfile 옵션을 사용하여 명시적으로 파일 지정
+          docker build -f ./ApiDockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          # 다음 스텝에서 사용할 전체 이미지 URI를 출력합니다.
+          echo "image_uri=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      # 7. ECS 서비스 업데이트 (새 배포 강제 실행)
-      - name: Update ECS Service
+      # ==========================================================
+      # 7. ⭐ 핵심 단계: Task Definition 업데이트 및 ECS 서비스 배포 ⭐
+      # ==========================================================
+      - name: Deploy to ECS Fargate
+        id: deploy-task
+        env:
+          IMAGE_URI: ${{ steps.build-image.outputs.image_uri }}
         run: |
-          aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --force-new-deployment
+          # 1. 현재 Task Definition (TD) JSON을 다운로드 받습니다.
+          aws ecs describe-task-definition \
+            --task-definition ${{ env.ECS_TASK_DEFINITION_NAME }} \
+            --query 'taskDefinition' \
+            --region ${{ env.AWS_REGION }} \
+            > task-definition.json
+
+          # 2. jq를 사용하여 JSON 파일에서 새 이미지 URI로 교체하고 불필요한 필드를 제거합니다.
+          cat task-definition.json \
+          | jq --arg IMG_URI "$IMAGE_URI" \
+               --arg CONTAINER_NAME "${{ env.CONTAINER_NAME }}" \
+               '(.containerDefinitions[] | select(.name == $CONTAINER_NAME).image) = $IMG_URI' \
+          | jq 'del(.status, .requiresAttributes, .revision, .compatibilities, .registeredAt, .registeredBy, .deregisteredAt, .runtimePlatform, .taskDefinitionArn, .requiresAttributes)' \
+          > new-task-definition.json
+          
+          echo "::notice file=new-task-definition.json::새 Task Definition을 등록합니다. 이미지: $IMAGE_URI"
+
+          # 3. 새로운 Task Definition을 AWS에 등록합니다.
+          NEW_TASK_DEF_ARN=$(aws ecs register-task-definition \
+            --cli-input-json file://new-task-definition.json \
+            --query 'taskDefinition.taskDefinitionArn' \
+            --region ${{ env.AWS_REGION }} \
+            --output text)
+
+          # 4. ECS 서비스에 새로운 Task Definition으로 업데이트 명령을 내립니다.
+          aws ecs update-service \
+            --cluster ${{ env.ECS_CLUSTER }} \
+            --service ${{ env.ECS_SERVICE }} \
+            --task-definition $NEW_TASK_DEF_ARN \
+            --force-new-deployment \
+            --region ${{ env.AWS_REGION }}
+
+      # ▼▼▼▼▼▼▼ [마무리] 디스코드 알림 ▼▼▼▼▼▼▼
+      - name: Discord Notification
+        uses: sarisia/actions-status-discord@v1
+        if: always()
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          title: "백엔드 배포 결과 - ${{ github.ref_name }}"
+          description: |
+            **상태:** ${{ job.status }}
+            **실행자:** ${{ github.actor }}
+            **커밋:** ${{ github.event.head_commit.message }}
+            **Task Def ARN:** ${{ steps.deploy-task.outputs.NEW_TASK_DEF_ARN }}
+          color: ${{ job.status == 'success' && '0x28a745' || '0xdc3545' }}
+          username: GitHub Actions Bot
