--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,79 +6,64 @@ on:
       - main
 
 env:
+  # ⚠️ 사용자님이 제공한 명령어에 us-east-1로 되어 있어 수정했습니다.
+  # 만약 서울(ap-northeast-2)에 만드셨다면 이 부분을 꼭 수정하세요!
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: sourcing-api               # ECR 리포지토리 이름 (사용자 지정)
-  ECS_SERVICE: SourcingAPITask-service-v1zou2fu  # 사용되지 않음
-  ECS_CLUSTER: SmartSourcing-Cluster          # 사용되지 않음
-  CONTAINER_NAME: sourcing-api               # 사용되지 않음
-  ECS_TASK_DEFINITION_NAME: SourcingAPITask # 사용되지 않음
+  ECR_REPOSITORY: sourcing-api
 
 jobs:
   deploy:
     name: Build and Push ECR
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # jq 설치는 이제 필수는 아니지만, 워크플로우 구조 유지를 위해 남겨둡니다.
-      - name: Install jq
-        run: sudo apt-get update && sudo apt-get install -y jq
-
-      # 1. Java JDK 17 세팅 (Spring Boot 버전에 맞춰 JDK 설정)
+      # 1. JDK 17 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 2. gradlew 실행 권한 부여 및 빌드
+      # 2. Gradle 권한 부여 및 빌드 (JAR 파일 생성)
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build -x test
+        run: ./gradlew clean bootJar -x test
 
+      # 3. AWS 인증 (러너랩은 Session Token이 필수입니다)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # ⭐️ 러너랩 필수
           aws-region: ${{ env.AWS_REGION }}
 
-      # ⭐ 디버깅을 위해 현재 인증 상태를 확인합니다. (권한 문제 확인용)
-      - name: Check AWS Caller Identity
-        run: aws sts get-caller-identity
-
+      # 4. ECR 로그인
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # 6. Docker 이미지 빌드 및 푸시 (ApiDockerfile 사용)
+      # 5. Docker 빌드 및 푸시 (제공해주신 AWS 명령어 로직 적용)
       - name: Build, tag, and push image to Amazon ECR
-        id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }} # 커밋 SHA를 태그로 사용 (버전 관리 용이)
         run: |
-          # ⭐ 디버깅을 위한 변수 출력
-          echo "ECR_REGISTRY: $ECR_REGISTRY"
-          echo "ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}"
+          # 제공하신 AWS 명령어와 동일한 동작을 수행합니다.
           
-          FULL_IMAGE_NAME="$ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$IMAGE_TAG"
-          
-          # ApiDockerfile을 사용하여 이미지 빌드
-          docker build -f ./ApiDockerfile -t "$FULL_IMAGE_NAME" .
-          
-          # 빌드된 이미지를 ECR로 푸시
-          docker push "$FULL_IMAGE_NAME"
-          
-          # 다음 스텝에서 사용할 전체 이미지 URI를 출력합니다.
-          echo "image_uri=$FULL_IMAGE_NAME" >> $GITHUB_OUTPUT
+          # 1. 도커 이미지 빌드 (파일명이 Dockerfile 이라고 가정)
+          # 만약 파일명이 ApiDockerfile이면: docker build -f ApiDockerfile -t $ECR_REPOSITORY . 로 바꾸세요.
+          docker build -f ApiDockerfile -t $ECR_REPOSITORY .
 
-      # ▼▼▼▼▼ [ECS 배포 로직 및 알림 제거됨] ▼▼▼▼▼
-      - name: ECR Push Completed
-        run: echo "Backend image push to ECR completed successfully. Deployment to ECS was skipped as requested."
+          # 2. 태그 지정 (latest)
+          docker tag $ECR_REPOSITORY:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+          # 3. ECR로 푸시
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          
+          echo "✅ ECR Push Success!"
+          echo "Image URI: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
